--- a/Golang/Dockerfile
+++ b/Golang/Dockerfile
@@ -1,20 +1,14 @@
-
-FROM golang:1.19-alpine
-
+# Build Stage
+FROM golang:1.19-alpine3.16 AS builder
 WORKDIR /app
-
-COPY go.mod ./
-COPY go.sum ./
-
-RUN go mod download
-
 COPY . .
+RUN go build -o main main.go 
 
-COPY *.go ./
+# Run Stage
+FROM alpine:3.16
+WORKDIR /app
+COPY --from=builder /app/main .
+COPY app.env . 
 
-RUN go build -o /main
-
-# Or whatever port you want to expose
-EXPOSE 8000 
-
-CMD [ "/main" ]
+EXPOSE 8080
+CMD [ "/app/main" ]
